# signalstack

./: .gitignore  LICENSE  README.md  TODOS.md  pyproject.toml
examples/: sample_digest.md  sample_investigation.md
scripts/: verify_elevenlabs_headless.py
signalstack/: __main__.py  cli.py  pipeline.py  requirements.txt
signalstack/agents/: debate_agent.py  debate_context.py  investigator.py  ranker.py  summarizer.py  synthesizer.py  tools.py  trace.py
signalstack/data/: debate_personas.yaml  feeds.yaml  seen_articles.json
signalstack/digest/: generator.py
signalstack/ingestion/: feed_loader.py  rss_reader.py
signalstack/models/: article.py
signalstack/processing/: article_store.py  extractor.py
tests/: test_article_store.py  test_debate_agent.py  test_debate_context.py  test_extractor.py  test_feed_loader.py  test_generator.py  test_investigator.py  test_ranker.py  test_summarizer.py  test_synthesizer.py  test_tools.py
